<resources>
    <string name="app_name">Compost Control</string>
    <string name="send">Aplicar</string>
    <string name="limTemp">#Valor limite temperatura#</string>
    <string name="limHum">#Valor limite humedad#</string>
    <string name="actualValues">#Valores actuales hum y temp#</string>
    <string name="up">+</string>
    <string name="down">-</string>
    <string name="TempUnit">°C</string>
    <string name="HumUnit">%</string>
    <string name="channel_name">Alarmas</string>
    <string name="channel_description">canal para enviar notificaciones de alarmas</string>
</resources>