<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7E7878"
    tools:context=".Vista">

    <TextView
        android:id="@+id/textViewTempLim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#C6C1C1"
        android:text="@string/limTemp"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewHumLim"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewHumLim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#C6C1C1"
        android:text="@string/limHum"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewActVal"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTempLim" />

    <TextView
        android:id="@+id/textViewActVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#C6C1C1"
        android:text="@string/actualValues"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHumLim" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewActVal" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewTempLim"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonTup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/up" />

        <Button
            android:id="@+id/buttonTdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/down"
            app:layout_constraintEnd_toEndOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/textViewActVal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewHumLim"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <Button
            android:id="@+id/buttonHup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/up" />

        <Button
            android:id="@+id/buttonHdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/down" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>